--- a/Regression_Metrics_Exercise_(Core).ipynb
+++ b/Regression_Metrics_Exercise_(Core).ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNVtXEDoavMUQ3r4gLPkBGL",
+      "authorship_tag": "ABX9TyMVPjlFnHUZOC18zRg+Jl9B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,13 +29,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2p8b24deOOiJ",
-        "outputId": "9f4cf072-bbdb-42a3-f356-8b695e893e5e"
+        "outputId": "7e131c28-a8d0-4731-93f7-27c9ed5ca30c"
       },
       "outputs": [
         {
@@ -73,7 +73,7 @@
       "metadata": {
         "id": "gt5c1z6pQAsR"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -90,9 +90,9 @@
           "height": 206
         },
         "id": "8yLuJOdsQM0V",
-        "outputId": "78081c48-cec8-4a34-aadd-6dc7b5111bdb"
+        "outputId": "0440abcb-c41e-45e4-8195-8debe11e3127"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -107,7 +107,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-4c0a8f3d-3178-455a-b36e-ef15c280398f\">\n",
+              "  <div id=\"df-b10a0edb-9878-4dad-a47d-9f8853afaa73\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -190,7 +190,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4c0a8f3d-3178-455a-b36e-ef15c280398f')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b10a0edb-9878-4dad-a47d-9f8853afaa73')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -241,12 +241,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-4c0a8f3d-3178-455a-b36e-ef15c280398f button.colab-df-convert');\n",
+              "          document.querySelector('#df-b10a0edb-9878-4dad-a47d-9f8853afaa73 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-4c0a8f3d-3178-455a-b36e-ef15c280398f');\n",
+              "          const element = document.querySelector('#df-b10a0edb-9878-4dad-a47d-9f8853afaa73');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -342,9 +342,9 @@
           "height": 612
         },
         "id": "8lDBNS5sQWbl",
-        "outputId": "e7ffba79-5fb0-4f2f-8011-a67369281a98"
+        "outputId": "2400ec5e-b77d-4b9c-980a-0a209ffe3768"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -376,7 +376,7 @@
       "metadata": {
         "id": "NlHzPm6DQcuj"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -388,7 +388,7 @@
       "metadata": {
         "id": "Jf7MkJDTd88v"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -403,7 +403,7 @@
       "metadata": {
         "id": "8FKwBOAndFcd"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -415,7 +415,7 @@
       "metadata": {
         "id": "XQlyB_aZembt"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -427,7 +427,7 @@
       "metadata": {
         "id": "TgPxVHPnd2t_"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -441,9 +441,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bDqZ-eBnQcyw",
-        "outputId": "e7b31e43-b7ff-4293-e13e-1f148ae3ea6e"
+        "outputId": "90470862-613e-492f-ff5b-6076ad82fa51"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -452,7 +452,7 @@
               "ColumnTransformer(transformers=[('pipeline',\n",
               "                                 Pipeline(steps=[('standardscaler',\n",
               "                                                  StandardScaler())]),\n",
-              "                                 <sklearn.compose._column_transformer.make_column_selector object at 0x7f0fad53d490>)])"
+              "                                 <sklearn.compose._column_transformer.make_column_selector object at 0x7efc4337c890>)])"
             ]
           },
           "metadata": {},
@@ -470,7 +470,7 @@
       "metadata": {
         "id": "gJQTq5SbfU01"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -482,7 +482,7 @@
       "metadata": {
         "id": "60Xpt8z6f9XI"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -497,9 +497,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mOyBg2p2Y3OV",
-        "outputId": "70b39a0d-21bf-4192-a2f5-d56959e62450"
+        "outputId": "ce792aa9-5e2e-4c7d-d6ef-7668d187a83d"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -525,9 +525,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UuztuSPzZGZj",
-        "outputId": "c95e7d7d-61fe-4090-c181-eba1267064ec"
+        "outputId": "80ecd682-dcd0-4889-9c85-2f1b22487018"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -552,9 +552,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MgLL3O7LZo74",
-        "outputId": "18150ae9-452c-4578-c00c-e1c2111d6d03"
+        "outputId": "31a92a9d-6874-40d0-89ec-4aa76f46a35f"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -577,7 +577,7 @@
       "metadata": {
         "id": "GLe29Ejtbg4e"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -590,7 +590,7 @@
       "metadata": {
         "id": "AMKk8JNFf5p7"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -605,9 +605,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eakUJzNAaH72",
-        "outputId": "c72e5227-4cd7-4794-8674-df79a21ea024"
+        "outputId": "cf396eaa-dd15-4d9d-f1ae-86e5c00abf98"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -631,9 +631,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MQqelu49csF6",
-        "outputId": "20b2fc34-61e4-4056-abf9-b1ad8bd2214b"
+        "outputId": "b852a3dc-bbaa-4c27-d1e2-a5596987c47e"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -656,9 +656,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "liEedYa1aLFa",
-        "outputId": "fe85f06f-ddf0-475e-8086-d82a863cf08d"
+        "outputId": "530a99eb-efd9-49ea-d5f6-7a6e1af617d0"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -681,9 +681,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "12pK44DPdeGl",
-        "outputId": "57e0ce86-f53a-40e2-df16-0e4bf0c46b76"
+        "outputId": "a43f40d3-ffda-4efe-c9e9-f3419f0946eb"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -706,9 +706,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LT8pjGBHeGzz",
-        "outputId": "71f0c80e-9c92-4478-808a-0379f9ec651d"
+        "outputId": "a785d23b-0c33-4a8e-f1ed-e8c61ef884b3"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -723,6 +723,7 @@
       "cell_type": "code",
       "source": [
         "# there is a variance of 3.9% between the training set and the test set using RMSE\n",
+        "# however a score of 5.06 means that the model has high standard deviation or variance hence this is not a good model\n",
         "rmse_test = np.sqrt(mse_test)\n",
         "print(rmse_test)"
       ],
@@ -731,9 +732,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "asjmeIoIhL4j",
-        "outputId": "db650f36-be9b-47bf-aa7b-4fec81fbc353"
+        "outputId": "a652220e-fce4-43d9-cf4b-b120bbfcf325"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
